# food_scan

./: .env.production  .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.txt
apps/: apps.py
apps/food/: admin.py  models.py  urls.py
apps/food/api/: product.py  serializer.py
apps/food/gemini/: prompt.py  scan_food.py  schema.py  serializers.py  services.py
apps/food/migrations/: 0001_initial.py  0002_product_is_active_product_user.py  0003_alter_product_is_active.py
apps/user/: models.py  urls.py
apps/user/external_api/: apple_api.py  apple_services.py  google_api.py
apps/user/migrations/: 0001_initial.py  0002_alter_user_id_alter_user_provider.py
config/: settings.py  urls.py
